--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - client
   api:
     build:
+      image: fredrickksola/node-app:latest
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
@@ -41,6 +42,7 @@ services:
       - postgres
   client:
     build:
+      image: fredrickksola/react-app:latest
       dockerfile: Dockerfile.dev
       context: ./client
     container_name: client
@@ -51,6 +53,7 @@ services:
       - ./client:/app
   worker:
     build:
+      image: fredrickksola/node-worker:latest
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
